add notify  module

--- a/imem/src/app/dashboard/request-panel/request-panel.component.html
+++ b/imem/src/app/dashboard/request-panel/request-panel.component.html
@@ -15,6 +15,7 @@
 				<div class="clearfix"></div>
 			</div>
 			<div class="x_content">
+			<p-growl [value]="msgs" [life]="2000"></p-growl>
 			<div class="" role="tabpanel" data-example-id="togglable-tabs">
 				<ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
 					<li role="presentation" class="active"><a href="#tab_content1" role="tab" id="profile-tab" data-toggle="tab" aria-expanded="false">Портал</a>
