--- a/imem/src/app/dashboard/lecture.component/lecture.component.html
+++ b/imem/src/app/dashboard/lecture.component/lecture.component.html
@@ -21,12 +21,23 @@
                 <form class="form-horizontal form-label-left" #courseForm="ngForm" (ngSubmit)="onSubmit()">
                     <div class="form-group">
                         <label>Назва</label>
-                        <input class="form-control" value="Базова Лекція" required [readonly]="submitted">
+                        <input class="form-control"
+                            value="Базова Лекція"
+                            [(ngModel)]="modelLecture.Name"
+                            required 
+                            name="name"
+                            [readonly]="submitted">
                     </div>
-                    <div class="form-group">
+                   <div class="form-group">
                         <label>Опис</label>
-                        <textarea style="height:200px;" class="resizable_textarea form-control" [readonly]="submitted" placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."></textarea>
+                        <div *ngIf="!submitted" [froalaEditor]="editorConfig" [(froalaModel)]="modelLecture.Description"></div>
+                        <div *ngIf="submitted"
+                             class="form-control scrollable"
+                             [ngClass]="{'editor-panel': submitted && !!modelLecture.Description}">
+                            <div *ngIf="!!modelLecture.Description" [froalaView]="modelLecture.Description"></div>
+                        </div>
                     </div>
+                    
                     <div class="form-group" align="center" [hidden]="submitted">
                         <button type="submit" class="btn btn-success" [disabled]="!courseForm.form.valid">Підтвердити</button>
                     </div>
