--- a/imem/src/styles.css
+++ b/imem/src/styles.css
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 /*primeng style set*/
+
+.scrollable {
+    overflow-y: auto;
+}
+
 .x_panel .ui-widget-content{
   color: #566372;
 }
