add tree structured comment / comment section

--- a/imem/src/app/dashboard/lecture.component/lecture.component.html
+++ b/imem/src/app/dashboard/lecture.component/lecture.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="clearfix"></div>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
                 <h2>Лекція</h2>
@@ -95,21 +95,28 @@
     </div>
 </div>
 <div class="row" id="comment-section" tabindex="0">
-    <div class="col-md-12">
+    <div class="col-md-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
                 <h2>Коментарі <small></small></h2>
                 <ul class="nav navbar-right panel_toolbox">
                     <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                     </li>
-                    <li><a (click)="commentSection.toggleCommentSection()"><i class="fa fa-plus"></i></a>
-                    </li>
+                    <!--<li><a (click)="commentSection.toggleCommentSection()"><i class="fa fa-plus"></i></a>
+                    </li>-->
                 </ul>
 
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
                 <comment-section #commentSection></comment-section>
+                <hr />
+                <div class="form-group" align="center" *appLayout="'lectureScope.addFileButton'">
+                    <div class="btn btn-primary submit"
+                    *ngIf="!commentSection.isShowCommentSection"
+                     (click)="commentSection.toggleCommentSection()"
+                     align="right"><i class="fa fa-plus m-right-xs"></i> Додати коментар</div>
+                </div>
                 <div class="clearfix" style="min-height: 100px;"></div>
             </div>
         </div>
