--- a/imem/src/app/dashboard/comment/comment.component.html
+++ b/imem/src/app/dashboard/comment/comment.component.html
@@ -5,21 +5,28 @@
     </div>
     <!-- /thumbnail -->
   </div>
-  <div class="col-sm-6">
+  <div class="col-sm-8">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong>{{modelComment.Author}}</strong> <span class="text-muted">{{modelComment.DateLabel}}</span>
+        <div style="display: inline;">
+          <strong>{{modelComment.Author}}</strong> <span class="text-muted">{{modelComment.DateLabel}}</span>
+        </div>
+        <div style="float: right; width: 50;">
+          <div class="btn btn-default btn-xs" tabindex="4">
+            <i class="fa fa-pencil" align="right" aria-hidden="true" (click)="editComment()"> Редагувати</i>
+          </div>
+        </div>
       </div>
       <div class="panel-body" style="color:black;">
         <div class="message scrollable" [froalaView]="modelComment.EditorContent"></div>
       </div>
       <div class="panel-heading">
         <div align="right">
-          <div class="btn btn-default btn-xs">
+          <!--<div class="btn btn-default btn-xs" tabindex="4">
             <i class="fa fa-edit" align="right" aria-hidden="true" (click)="editComment()"> Редагувати</i>
-          </div>
-          <div class="btn btn-default btn-xs">
-            <i class="fa fa-reply" align="right" aria-hidden="true" (click)="commentSection.toggleCommentSection()">Відповісти</i>
+          </div>-->
+          <div *ngIf="isAllowedToReply" class="btn btn-primary btn-xs" tabindex="5">
+            <i class="fa fa-reply" align="right" aria-hidden="true" (click)="commentSection.toggleCommentSection()"> Відповісти</i>
           </div>
         </div>
       </div>
@@ -28,10 +35,10 @@
 </div>
 <div class="col-md-10 col-center" [hidden]="!isShowCommentSection">
   <div [froalaEditor]="editorConfig" [(froalaModel)]="bufferComment.EditorContent"></div>
-  <div class="form-group" id="commentBtn" align="center" style="margin-top: 20px;">
-    <a class="btn btn-success" (click)="confirmComment()"><i class="fa fa-edit m-right-xs"></i>Підтвердити</a>
+  <div class="form-group" id="commentBtn" align="center" style="margin-top: 20px;" tabindex="6">
+    <a class="btn btn-success" #mainButton (click)="confirmComment()"><i class="fa fa-edit m-right-xs"></i>Підтвердити</a>
   </div>
 </div>
 <div class="col-sm-offset-1">
-  <comment-section #commentSection></comment-section>
+  <comment-section #commentSection [isRootSection]="false"></comment-section>
 </div>
