--- a/imem/src/app/dashboard/lecture.component/lecture.component.html
+++ b/imem/src/app/dashboard/lecture.component/lecture.component.html
@@ -111,7 +111,7 @@
             <div class="x_content">
                 <comment-section #commentSection></comment-section>
                 <hr />
-                <div class="form-group" align="center" *appLayout="'lectureScope.addFileButton'">
+                <div class="form-group" align="center" *appLayout="'lectureScope.addCommentButton'">
                     <div class="btn btn-primary submit"
                     tabindex="0"
                     *ngIf="!commentSection.isShowCommentSection"
