--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -2,6 +2,8 @@
     <div class="title_left">
         <h3>Загальна інформація про курс</h3>
     </div>
+    
+
 </div>
 <div class="clearfix"></div>
 <div class="row">
@@ -10,6 +12,8 @@
             <div class="x_title">
                 <h2>Курс [NAME]</h2>
                 <ul class="nav navbar-right panel_toolbox">
+                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                    </li>
                     <li><a class="" (click)="navigateToParent()"><i class="fa fa-reply-all"></i><b> Назад</b></a>
                     </li>
                     <li><a class="" (click)="deleteCourseModal()" *appLayout="'courseScope.deleteButton'"><i class="fa fa-remove"></i></a>
@@ -18,6 +22,7 @@
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
+                <p-growl [value]="msgs" [life]="2000"></p-growl>
                 <div class="deleteDialog">
                     <p-confirmDialog closeOnEscape="true" [responsive]="true" width="500" acceptLabel="Так" rejectLabel="Ні">
                     </p-confirmDialog>
@@ -82,6 +87,11 @@
                         <button type="submit" class="btn btn-success" [disabled]="!courseForm.form.valid">Підтвердити</button>
                     </div>
                 </form>
+                <div class="form-group" align="center" *appLayout="'courseScope.subscribeButton'">
+                    <a class="btn"
+                    [ngClass]="{'btn-warning': !courseStatusForUser, 'btn-info': courseStatusForUser}"
+                    (click)="requestForCourseModal()">{{courseMessageForCurrentuser}}</a>
+                </div>
                 <div class="form-group" align="center" [hidden]="!submitted" *appLayout="'courseScope.editButton'">
                     <a class="btn btn-success"  (click)="formReset()"><i class="fa fa-edit m-right-xs"></i>Редагувати</a>
                 </div>
