--- a/imem/src/app/dashboard/course.component/course.component.html
+++ b/imem/src/app/dashboard/course.component/course.component.html
@@ -2,8 +2,6 @@
     <div class="title_left">
         <h3>Загальна інформація про курс</h3>
     </div>
-    
-
 </div>
 <div class="clearfix"></div>
 <div class="row">
@@ -113,6 +111,24 @@
             </div>
             <div class="x_content">
             <lectures-table></lectures-table>
+            </div>
+        </div>
+    </div>
+    <div class="clearfix" style="min-height: 100px;"></div>
+</div>
+<div class="row">
+    <div class="col-md-12" >
+        <div class="x_panel">
+            <div class="x_title">
+            <h2>Завдання <small></small></h2>
+            <ul class="nav navbar-right panel_toolbox">
+                <li><a class="collapse-link"><i class="fa fa-chevron-down"></i></a>
+                </li>
+            </ul>
+            <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+            <exercises-table></exercises-table>
             </div>
         </div>
     </div>
