--- a/imem/src/app/dashboard/dashboard.component.html
+++ b/imem/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="nav-md footer_fixed" id="body">
+<div class="nav-md" id="body">
   <div class="container body">
     <div class="main_container">
       <sidebar-g></sidebar-g>
