--- a/imem/src/app/dashboard/exercises/exercises.component.html
+++ b/imem/src/app/dashboard/exercises/exercises.component.html
@@ -1,3 +1,23 @@
-<p-dataTable [value]="cars" emptyMessage="?">
-    <p-column field="name" [filter]="true" header="name"></p-column>
-</p-dataTable>
+<div class="page-title">
+	<div class="title_left">
+	</div>
+</div>
+<div class="clearfix"></div>
+<div class="row">
+	<div class="col-md-12">
+		<div class="x_panel">
+			<div class="x_title">
+				<h2>Студенти</h2>                
+				<ul class="nav navbar-right panel_toolbox">
+					<li><i class="fa fa-graduation-cap" aria-hidden="true" style="font-size: 32pt;"></i>
+					</li>
+				</ul>
+				<div class="clearfix"></div>
+			</div>
+			<div class="x_content">
+                <exercises-table></exercises-table>
+                <div class="clearfix"></div>
+			</div>
+		</div>
+	</div>
+</div>
